# 02460-project-3

./: .gitignore  Makefile  main.py  pyproject.toml  readme.md  requirements.txt  todo.md
src/: adj_test.py  baseline.py  eval_metrics.py  gnn.py  graph_statistics.py  graph_statistics_nx_sanity.py  graphgan.py  nodevae.py  sample_histograms.py  test_vae.py  utils.py  vae_trainer.py
src/GraphVAE/: basevae.py  graphvae.py  naivevae.py  vae_decoder_network.py  vae_encoder_network.py
